@@ -28,6 +28,15 @@ HOW TO UPDATE?
 
 Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.1.0-beta13
 
+Fixes:
+
+- Images: Fixed memory leaks for image textures #122
+- Other:  Fixed stop_dearpygui command #102
+
+New Commands:
+
+- Widgets: add "does_item_exist" command #119
+
 
 -----------------------------------------------------------------------
  VERSION 0.1.0 Beta 12
